fea: Se continua con la migración de los EJB